@@ -37,6 +37,7 @@
 - [#790] Generate unique name for each detail.
 - [#792] New feature. Visibility trigger for internal path.
 - New internal variable RotationElArc.
+- [#794] Better control over scale value.
 
 # Version 0.5.1
 - [#683] Tool Seam allowance's dialog is off screen on small resolutions.
